--- a/03X_ST_IC/03_live_25k/stic_binance_SOL_config.json
+++ b/03X_ST_IC/03_live_25k/stic_binance_SOL_config.json
@@ -6,6 +6,7 @@
     "life": 5,
     "safe_fac": 1.28,
     "symbol": "SOLUSDT",
+    "position" : 2,
     "path": "/home/ubuntu/Rheza/local-share/03X_ST_IC/03_live_25k",
     "log_filename": "binance_stic_sol_bot_25k",
     "csv_filename": "historical_OHLC_SOL.csv"
